--- a/blog/templates/editar_post.html
+++ b/blog/templates/editar_post.html
@@ -1,24 +1,54 @@
 {% extends 'padre.html' %}
 {% load static %}
 {% block contenido %}
-<main class="mb-4">
-    <div class="container px-4 px-lg-5">
-        <div class="row gx-4 gx-lg-5 justify-content-center">
-            <div class="col-md-10 col-lg-8 col-xl-7">
-                <h1>Editar post</h1>
-                <div class="my-5">
-                    <div class="form-floating">
-                        <form action="" method="POST">
-                            {% csrf_token %}
-                            {{form.as_p}}
-                            <br />
-                            <!-- Submit Button-->
-                            <button class="btn btn-light" id="submitButton" type="submit">Actualizar</button>
-                        </form>
+{% if user.is_authenticated %}
+    {% if user.id == post.autor.id %}
+        <main class="mb-4">
+            <div class="container px-4 px-lg-5">
+                <div class="row gx-4 gx-lg-5 justify-content-center">
+                    <div class="col-md-10 col-lg-8 col-xl-7">
+                        <h1>Editar post</h1>
+                        <div class="my-5">
+                            <div class="form-floating">
+                                <form action="" method="POST">
+                                    {% csrf_token %}
+                                    {{form.as_p}}
+                                    <br />
+                                    <!-- Submit Button-->
+                                    <button class="btn btn-light" id="submitButton" type="submit">Actualizar</button>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </main>
+        {% else %}
+        <main class="mb-4">
+            <div class="container px-4 px-lg-5">
+                <div class="row gx-4 gx-lg-5 justify-content-center">
+                    <div class="col-md-10 col-lg-8 col-xl-7">
+                        <h1>Sólo el autor puede editar este post.</h1><br>
+                        <div class="field">
+                            <a href="{% url 'inicio' %}"><button class="btn btn-light small">Volver</button></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </main>
+        {% endif %}
+{% else %}
+    <main class="mb-4">
+        <div class="container px-4 px-lg-5">
+            <div class="row gx-4 gx-lg-5 justify-content-center">
+                <div class="col-md-10 col-lg-8 col-xl-7">
+                    <h1>¡Tenés que estar logueado para ver esta página!</h1><br>
+                    <div class="field">
+                        <a href="{% url 'login' %}"><button class="btn btn-light small">Login</button></a>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-</main>
+    </main>
+{% endif %}
 {% endblock %}
