--- a/blog/templates/pages.html
+++ b/blog/templates/pages.html
@@ -2,6 +2,7 @@
 {% load static %}
 {% load i18n %}
 {% block contenido %}
+{% if user.is_authenticated %}
         <!-- Post Content-->
         <div class="container position-relative px-4 px-lg-5">
             <div class="row gx-4 gx-lg-5 justify-content-center">
@@ -23,10 +24,12 @@
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
                         <p>{{post.cuerpo}}</p>
+                        {% if user.id == post.autor.id %}
                         <div class="field">
                             <a href="{% url 'editar_post' post.pk %}"><button class="btn btn-light small">Editar</button></a>
                             <a href="{% url 'eliminar_post' post.pk %}"><button class="btn btn-light small">Eliminar</button></a>
                         </div>
+                        {% endif %}
                     </div>
                 </div>
             </div>
@@ -66,4 +69,18 @@
             </div>
         </div>
     <br>
+{% else %}
+<main class="mb-4">
+    <div class="container px-4 px-lg-5">
+        <div class="row gx-4 gx-lg-5 justify-content-center">
+            <div class="col-md-10 col-lg-8 col-xl-7">
+                <h1>¡Tenés que estar logueado para ver esta página!</h1><br>
+                <div class="field">
+                    <a href="{% url 'login' %}"><button class="btn btn-light small">Login</button></a>
+                </div>
+            </div>
+        </div>
+    </div>
+</main>
+{% endif %}
 {% endblock %}
