--- a/blog/templates/subir_post.html
+++ b/blog/templates/subir_post.html
@@ -1,6 +1,7 @@
 {% extends 'padre.html' %}
 {% load static %}
 {% block contenido %}
+{% if user.is_authenticated %}
 <main class="mb-4">
     <div class="container px-4 px-lg-5">
         <div class="row gx-4 gx-lg-5 justify-content-center">
@@ -21,4 +22,18 @@
         </div>
     </div>
 </main>
+{% else %}
+<main class="mb-4">
+    <div class="container px-4 px-lg-5">
+        <div class="row gx-4 gx-lg-5 justify-content-center">
+            <div class="col-md-10 col-lg-8 col-xl-7">
+                <h1>¡Tenés que estar logueado para ver esta página!</h1><br>
+                <div class="field">
+                    <a href="{% url 'login' %}"><button class="btn btn-light small">Login</button></a>
+                </div>
+            </div>
+        </div>
+    </div>
+</main>
+{% endif %}
 {% endblock %}
