Subida de imgs lista

--- a/blog/templates/pages.html
+++ b/blog/templates/pages.html
@@ -10,6 +10,7 @@
                     <div class="post-preview">
                         <h1>{{post.titulo}}</h1><br>
                         <h3 class="post-subtitle">{{post.subtitulo}}</h3>
+                        <img src="{{post.imagen.url}}" alt="">
                         <p class="post-meta">
                             Subido por
                             <a href="#!">{{post.autor}}</a>
