--- a/blog/templates/home.html
+++ b/blog/templates/home.html
@@ -7,23 +7,27 @@
     <div class="row gx-4 gx-lg-5 justify-content-center">
         <div class="col-md-10 col-lg-8 col-xl-7">
             <!-- Post preview-->
-            {% for post in posts %}
-            <div class="post-preview">
-                    <h2 class="post-title">{{post.titulo}}</h2>
-                    <h3 class="post-subtitle">{{post.subtitulo}}</h3>
-                    {% if post.imagen %}
-                        <img src="{{post.imagen.url}}" alt="">
-                    {% endif %}
-                <p class="post-meta">
-                    Subido por
-                    <a href="#!">{{post.autor}}</a>
-                    el {% language 'es' %}{{post.fecha}}{% endlanguage %}
-                </p>
-                <button class="btn btn-light"><a href="{% url 'pages' post.id %}">Ver más</a></button>
-            </div>
-            <!-- Divider-->
-            <hr class="my-4" />
-            {% endfor %}
+            {% if cant_posts == 0 %}
+                <h1 style="text-align: center;">No hay posts todavía =(</h1>
+            {% else %}
+                {% for post in posts %}
+                <div class="post-preview">
+                        <h2 class="post-title">{{post.titulo}}</h2>
+                        <h4 class="post-subtitle">{{post.subtitulo}}</h4>
+                        {% if post.imagen %}
+                            <img src="{{post.imagen.url}}" alt="">
+                        {% endif %}
+                    <p class="post-meta">
+                        Subido por
+                        <a href="#!">{{post.autor}}</a>
+                        el {% language 'es' %}{{post.fecha}}{% endlanguage %}
+                    </p>
+                    <button class="btn btn-light"><a href="{% url 'pages' post.id %}">Ver más</a></button>
+                </div>
+                <!-- Divider-->
+                <hr class="my-4" />
+                {% endfor %}
+            {% endif %}
         </div>
     </div>
 </div>
